Tue Dec  7 19:24:33 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* variable.c (FinalVM_var_table): vm->global_symbol shall be freed

	* variable.c (InitVM_var_tables): register FinalVM_var_table

Tue Dec  7 18:57:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): they are forgot to be freed.

Tue Dec  7 18:52:14 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread_pthread.c (ruby_native_thread_choke): New function.  Once
	  upon a time when we has only one VM per a process, a thread was
	  terminated by a process termination.  This is because by
	  definition a VM exits when its entry point function exits, and
	  that was (almost) equivalent to when a process exits.  Now that
	  we have multiple VMs, VM termination is no longer connected to
	  process termination so we have lost our chance to finish
	  threads.

	* eval_intern.h: ditto.

	* vm.c (vm_knockin_on_the_heavens_door): GOTTA KNOCK A LI'L HARDER

	* vm.c (ruby_vmptr_destruct): Ensure threads termination.

Mon Dec  6 16:21:12 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (Final_sym): New function.  Once upon a time when we had
	  only one VM per a process, a Symbol had a chance to pass away
	  when its process terminates itself, because the objspace a
	  Symbol was in was actually the single process-global objspace so
	  a objspace termination and process termination are 1 to 1
	  relationship.  Now that we have multiple VMs (thus multiple
	  objspaces), VM termination is no longer connected to process
	  termination so we have lost our chance to finalize global
	  objects, namely Symbols.

	* parse.y (Init_sym): Register Final_sym to be kicked when process
	  finishes.

Fri Dec  3 04:08:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (enc_alias_internal): use st_insert2 and change return
	  value to int.

	* encoding.c (enc_alias): follow enc_alias_internal.

Fri Dec  3 01:52:43 2010  NARUSE, Yui  <naruse@ruby-lang.org>
